# sillytavern-ttrpg

./: .env.example  .gitignore  AGENTS.md
Docs/: 00_README.md  01_SYSTEM_OVERVIEW.md  07_GM_BASE_PROMPT.md  (+10 more)
campaign_generator/: .env.example  .gitignore  README.md  pyproject.toml
campaign_generator/campaign_generator/: __init__.py  __main__.py  artifacts.py  diversity.py  env.py  llm.py  lorebook.py  pack.py  paths.py  pipeline.py  placeholders.py  schemas.py  seed.py  seed_template.py  settings.py  validation.py
campaign_generator/campaign_generator/stages/: __init__.py  branches.py  clue_chains.py  complications.py  factions.py  graph.py  initial_an.py  locations.py  node_generation.py  nodes.py  npcs.py  opening_hook.py  pc_known_npcs.py  plot_skeleton.py  premise.py  sample_characters.py  spoilers.py  truths.py
campaign_generator/examples/: seed_balanced.yaml  seed_maximum.yaml  seed_minimal.yaml
campaign_generator/prompts/: 01_premise.md  02_plot_skeleton.md  03_factions.md  04_npc.md  05_location.md  06_clue_chains.md  06_truths.md  06b_clue_prose.md  07_branches.md  07_complications.md  08_branches.md  08_initial_an.md  08a_node_start.md  08b_node_final.md  08c_node_intermediate.md  09_opening_hook.md  09b_pc_prior_knowledge.md  09c_pc_known_npc_vet.md  10_lorebook.md  10_sample_characters.md  11_spoilers.md  12_sample_characters.md
campaign_generator/tests/: test_graph_stage.py  test_image_render.py  test_lorebook_output.py  test_npc_prompt_contract.py  test_pack_validation.py  test_pc_known_npcs.py  test_pipeline.py  test_seed.py  test_seed_template.py
(+149 files in other folders)
